[project]
name = "euilee-lee"
version = "0.3.0"
description = "A left-handed pitcher for the KIA Tigers."
authors = [
    {name = "rim", email = "kylttop01@gmail.com"},
]
dependencies = []
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.0",
]
